Fixed jwt refresh token creation, time-duration converting, finished 2 todo items, created migration for indexes, added descrioption for eash command in run.sh
