# app/modules/links/serializers.go
@@ -5,11 +5,6 @@ import (
 	"go-ushorter/app/models"
 )
 
-type Serializer struct {
-	C     *gin.Context
-	Links []models.LinkModel
-}
-
 type LinkSerializer struct {
 	C *gin.Context
 	models.LinkModel
@@ -18,9 +13,9 @@ type LinkSerializer struct {
 type LinkResponse struct {
 	ID        uint   `json:"id"`
 	Name      string `json:"name"`
-	RealUrl   string `json:"real_url"`
+	RealUrl   string `json:"realUrl"`
 	Alias     string `json:"alias"`
-	CreatedAt string `json:"created_at"`
+	CreatedAt string `json:"createdAt"`
 }
 
 func (s *LinkSerializer) Response() LinkResponse {
@@ -33,7 +28,12 @@ func (s *LinkSerializer) Response() LinkResponse {
 	}
 }
 
-func (s *Serializer) Response() []LinkResponse {
+type LinksSerializer struct {
+	C     *gin.Context
+	Links []models.LinkModel
+}
+
+func (s *LinksSerializer) Response() []LinkResponse {
 	res := make([]LinkResponse, 0, len(s.Links))
 	for _, lm := range s.Links {
 		res = append(res, LinkResponse{
@@ -45,4 +45,21 @@ func (s *Serializer) Response() []LinkResponse {
 		})
 	}
 	return res
+}
+
+type CreatedLinkSerializer struct {
+	C *gin.Context
+	models.LinkModel
+}
+
+type CreatedLinkResponse struct {
+	ID    uint   `json:"id"`
+	Alias string `json:"alias"`
+}
+
+func (s *CreatedLinkSerializer) Response() CreatedLinkResponse {
+	return CreatedLinkResponse{
+		s.ID,
+		s.GeneratedAlias,
+	}
 }
